# gridone-chiller-emulator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: bump.yml  ci.yml  release-image.yml
chiller/: __init__.py  api.py  chiller.py  service.py  simulation.py
chiller/domain/: __init__.py  abstract_chiller_service.py  chiller.py  service.py
chiller/http/: http_controller.py  schemas.py
chiller/modbus/: modbus_controller.py  registers.py
tests/: conftest.py  test_chiller_api.py  test_chiller_model.py
tests/integration/: test_chiller_simulation.py
tests/unit/domain/: test_chiller_state.py  test_simulation.py
tests/unit/http/: test_http_controller.py
tests/unit/modbus/: test_modbus_controller.py
