[project]
name = "gridone-chiller-emulator"
version = "0.4.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "pymodbus>=3.12.1",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]
test = [
    "pytest",
    "httpx",
]

[tool.uv]
package = true

[tool.ruff]
indent-width = 4
line-length = 88
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
   "D",
   "COM812",
   "S101",
   "ARG005",
   "FBT001",
   "FBT002",
   "FBT003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "SLF001", "E501", "ARG002"]
"scripts/**" = ["SLF001", "INP001", "T201"]

[tool.ty.environment]
python-version = "3.13"

[tool.commitizen]
version = "0.4.1"
version_scheme = "semver"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
